--- a/ConverterToBytesCLI/ConverterToBytesCLI.csproj
+++ b/ConverterToBytesCLI/ConverterToBytesCLI.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MatthiWare.CommandLineParser" Version="0.6.0" />
+  </ItemGroup>
+
 </Project>
